--- a/index.html
+++ b/index.html
@@ -3,96 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C-moサイトのUI改善で予約率が大幅向上</title>
+    <title>WebサイトUI改善による予約率向上事例</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <div class="page-container">
         <header>
-            <h1>C-moサイトのUI改善で<br>予約率が大幅向上</h1>
-            <h2 class="subtitle">～Microsoft Clarityを用いたブラッシュアップ施策～</h2>
+            <h1>自社サイトのUI改善で予約率が大幅向上</h1>
+            <p class="subtitle">Microsoft Clarityを用いた分析・改善事例の紹介</p>
         </header>
 
-        <section class="store-info">
-            <h2>店舗情報</h2>
-            <ul>
-                <li><strong>エリア：</strong>福岡県宗像市（赤間駅から車で約10分、駅から約2km）</li>
-                <li><strong>業態：</strong>海鮮居酒屋</li>
-                <li><strong>単価：</strong>約5,500円</li>
-                <li><strong>営業時間：</strong>17:00～24:00</li>
-                <li><strong>席数：</strong>53席</li>
-            </ul>
-            <p>主なお客様はファミリー層。ローカル立地ながら売上5月着地は予算・前年比ともに大幅達成。</p>
-        </section>
-
-        <section class="metrics">
-            <div class="metric-card">
-                <div class="metric-icon rocket">
-                    <!-- 予約率アイコン -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M13.12.727a.5.5 0 0 1 .76 0l2.5 2.5a.5.5 0 0 1 0 .76l-1.06 1.061a4.501 4.501 0 0 1-5.694 6.132l-6.248 6.248a.5.5 0 0 1-.708 0l-1.767-1.768a.5.5 0 0 1 0-.707l6.248-6.248A4.5 4.5 0 0 1 12.06 4.94L13.12.727zM6.48 15.652a1.5 1.5 0 1 0-2.121-2.121 1.5 1.5 0 0 0 2.121 2.121zM17 10.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0v-1a.5.5 0 0 1 .5-.5z"/></svg>
-                </div>
-                <div class="metric-text">
-                    <p>実予約率を改善し</p>
-                    <h2><span>69%</span>向上！</h2>
-                    <small>（昨年5月29.9% → 2025年5月50.6%）</small>
-                </div>
-            </div>
-            <div class="metric-card">
-                <div class="metric-icon users">
-                    <!-- エンゲージメントアイコン -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm0 16c-3.39 0-6.42-2.1-7.55-5.11a.5.5 0 0 1 .44-.63h14.22a.5.5 0 0 1 .44.63C18.42 17.9 15.39 20 12 20zM19 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM7 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm11.5 10.15a.5.5 0 0 1 .49.59C17.88 21.08 15.1 23 12 23s-5.88-1.92-6.99-4.26a.5.5 0 0 1 .49-.59h13z"/></svg>
-                </div>
-                <div class="metric-text">
-                    <p>セッションの質が改善し</p>
-                    <h2>エンゲージメント大幅向上</h2>
-                </div>
+        <section class="challenge">
+            <h2><span class="icon">🤔</span>課題：2025年に入り、売上が急に失速</h2>
+            <div class="content-box">
+                <p>福岡県宗像市の海鮮居酒屋の事例。2024年までは順調だったものの、2025年1月〜4月は予算・前年割れが続く状態でした。</p>
+                <p>WEB売上の約6割を占める自社サイトが見直されておらず、予約のボトルネックになっている可能性が浮上しました。</p>
             </div>
         </section>
 
-        <section class="challenges">
-            <h2>WEBサイトの主な課題</h2>
-            <ul>
-                <li>TOPページに外部リンクが多く、重要コンテンツにたどり着きにくい</li>
-                <li>過去情報や不要コンテンツが残り、ユーザーの行動を妨げている</li>
-            </ul>
+        <section class="analysis">
+            <h2><span class="icon">🔍</span>分析と施策：サイトの「使いにくさ」を解消</h2>
+            <div class="content-box">
+                <p>無料ツール「Microsoft Clarity」で調査した結果、以下の問題点が判明しました。</p>
+                <ul>
+                    <li>TOPページに外部リンクや不要な情報が多すぎ、重要なコンテンツに辿り着く前にユーザーが離脱している。</li>
+                    <li>情報が古く、サイトの信頼性が低下している。</li>
+                </ul>
+                <p class="action-title">そこで、4月中旬に以下の施策を実施しました。</p>
+                <ul>
+                    <li>TOPページの情報をスマホ1スクロール分に大幅削減。</li>
+                    <li>「ふるさと納税」などの外部リンクを削除し、コースや料理への導線を確保。</li>
+                    <li>古いメニューや価格表記を最新の情報に更新。</li>
+                </ul>
+            </div>
         </section>
 
-        <section class="actions">
-            <h2>実施施策（4月中旬～）</h2>
-            <ul>
-                <li>TOPページの文言をスマホ1スクロール分に収まる量に大幅削減</li>
-                <li>「ふるさと納税」など外部リンクを削除（先方許可済み）</li>
-                <li>提供メニュー・価格が最新か確認し、不要情報を削除</li>
-            </ul>
-        </section>
 
-        <section class="visitor-quality">
-            <h2>（High・Medium・Low）Intentionの定義</h2>
-            <div class="visitor-types">
-                <div class="type-card">
-                    <div class="type-icon exit"></div>
-                    <h3>Low Intention</h3>
-                    <p>5秒以内に離脱（直帰率高）</p>
+        <section class="results">
+            <h2><span class="icon">🎉</span>結果：予約率とユーザーの意欲が劇的に改善</h2>
+            <div class="metric-grid">
+                <div class="metric-card">
+                    <h3>実予約率が大幅改善</h3>
+                    <div class="metric-body vertical">
+                        <p class="before">32.2<span class="unit">%</span></p>
+                        <span class="arrow">↓</span>
+                        <p class="after">50.6<span class="unit">%</span></p>
+                    </div>
+                    <p class="caption">(25年1-4月平均 → 25年5月)</p>
                 </div>
-                <div class="type-card">
-                    <div class="type-icon neutral"></div>
-                    <h3>Medium Intention</h3>
-                    <p>長く滞在するがアクションなし</p>
-                </div>
-                <div class="type-card">
-                    <div class="type-icon interested"></div>
-                    <h3>High Intention</h3>
-                    <p>興味を持って滞在・アクションを行う</p>
+                <div class="metric-card">
+                    <h3>意欲の高いユーザーが<span class="large-text">339%</span>増加</h3>
+                    <div class="metric-body">
+                         <div class="chart">
+                             <div class="bar-container">
+                                 <div class="bar high-intention" style="height: 4.62%;"></div>
+                                 <div class="bar-label">3月</div>
+                             </div>
+                             <div class="bar-container">
+                                 <div class="bar high-intention" style="height: 13.79%;"></div>
+                                 <div class="bar-label">4月</div>
+                             </div>
+                             <div class="bar-container">
+                                 <div class="bar high-intention" style="height: 20.28%;"></div>
+                                 <div class="bar-label">5月</div>
+                             </div>
+                         </div>
+                    </div>
+                    <p class="caption">High Intentionユーザーの比率が4.62%→20.28%に向上</p>
                 </div>
             </div>
         </section>
+
+        <div class="explanation-box">
+            <h4>※High Intentionユーザーとは？</h4>
+            [cite_start]<p>サイトに5秒以上滞在し、クリックや主要なイベントを通じて積極的に操作を行うなど、強いエンゲージメントを反映したセッションを指します。多くの場合、予約や購入といったコンバージョンに近い、関心の高いユーザーとされています。 [cite: 171]</p>
+        </div>
 
         <footer>
-            <h2>WEBサイトの導線は<br>来店・予約に直結する重要要素です</h2>
+            <p>サイトに訪れたユーザーのエンゲージメントが向上し、予約という行動に繋がりやすくなったと考えられます。</p>
+            <div class="source-credit">
+                出典：株式会社CS-C C-moサイトのUI改善によるパフォーマンス向上
+            </div>
         </footer>
     </div>
+
 </body>
 </html>
