--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2><span class="icon">🤔</span>課題：2025年に入り、売上が急に失速</h2>
             <div class="content-box">
                 <p>福岡県宗像市の海鮮居酒屋の事例。2024年までは順調だったものの、2025年1月〜4月は予算・前年割れが続く状態でした。</p>
-                <p>WEB売上の約6割を占める自社サイトが見直されておらず、予約のボトルネックになっている可能性が浮上しました。</p>
+                <p>WEB売上の約6割を占める自社サイト(C-mo)が長年見直されておらず、予約のボトルネックになっている可能性が浮上しました。</p>
             </div>
         </section>
 
@@ -45,50 +45,31 @@
 
         <section class="results">
             <h2><span class="icon">🎉</span>結果：予約率とユーザーの意欲が劇的に改善</h2>
-            <div class="metric-grid">
-                <div class="metric-card">
-                    <h3>実予約率が大幅改善</h3>
-                    <div class="metric-body vertical">
-                        <p class="before">32.2<span class="unit">%</span></p>
-                        <span class="arrow">↓</span>
-                        <p class="after">50.6<span class="unit">%</span></p>
+            <div class="results-grid">
+                <div class="result-card">
+                    <p class="result-label">WEBサイトを見直したら</p>
+                    <div class="result-main">
+                        <p class="result-text">実予約率が</p>
+                        <p class="result-number">57<span class="unit">%</span></p>
+                        <p class="result-text">改善！</p>
                     </div>
-                    <p class="caption">(25年1-4月平均 → 25年5月)</p>
+                    <p class="result-caption">（32.2% → 50.6%に向上）</p>
                 </div>
-                <div class="metric-card">
-                    <h3>意欲の高いユーザーが<span class="large-text">339%</span>増加</h3>
-                    <div class="metric-body">
-                         <div class="chart">
-                             <div class="bar-container">
-                                 <div class="bar high-intention" style="height: 4.62%;"></div>
-                                 <div class="bar-label">3月</div>
-                             </div>
-                             <div class="bar-container">
-                                 <div class="bar high-intention" style="height: 13.79%;"></div>
-                                 <div class="bar-label">4月</div>
-                             </div>
-                             <div class="bar-container">
-                                 <div class="bar high-intention" style="height: 20.28%;"></div>
-                                 <div class="bar-label">5月</div>
-                             </div>
-                         </div>
+                <div class="result-card">
+                    <p class="result-label">興味を持ってサイトを閲覧する人が</p>
+                    <div class="result-main">
+                        <p class="result-number">339<span class="unit">%</span></p>
+                        <p class="result-text">増加！</p>
                     </div>
-                    <p class="caption">High Intentionユーザーの比率が4.62%→20.28%に向上</p>
+                    <p class="result-caption">（High Intentionユーザーの比率が4.62% → 20.28%に向上）</p>
                 </div>
             </div>
         </section>
 
         <div class="explanation-box">
             <h4>※High Intentionユーザーとは？</h4>
-            [cite_start]<p>サイトに5秒以上滞在し、クリックや主要なイベントを通じて積極的に操作を行うなど、強いエンゲージメントを反映したセッションを指します。多くの場合、予約や購入といったコンバージョンに近い、関心の高いユーザーとされています。 [cite: 171]</p>
+            <p>サイトに5秒以上滞在し、クリックや主要なイベントを通じて積極的に操作を行うなど、強いエンゲージメントを反映したセッションを指します。多くの場合、予約や購入といったコンバージョンに近い、関心の高いユーザーとされています。</p>
         </div>
-
-        <footer>
-            <p>サイトに訪れたユーザーのエンゲージメントが向上し、予約という行動に繋がりやすくなったと考えられます。</p>
-            <div class="source-credit">
-                出典：株式会社CS-C C-moサイトのUI改善によるパフォーマンス向上
-            </div>
-        </footer>
     </div>
 
 </body>
