--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebサイトUI改善による予約率向上事例</title>
+    <title>UI改善によるWebサイトのパフォーマンス向上事例</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,63 +13,78 @@
 
     <div class="page-container">
         <header>
-            <h1>自社サイトのUI改善で予約率が大幅向上</h1>
-            <p class="subtitle">Microsoft Clarityを用いた分析・改善事例の紹介</p>
+            <h1>UI改善で予約率が大幅向上した<br>Webサイト改善事例</h1>
+            <p>Microsoft Clarityを用いた分析・改善施策</p>
         </header>
 
-        <section class="challenge">
-            <h2><span class="icon">🤔</span>課題：2025年に入り、売上が急に失速</h2>
-            <div class="content-box">
+        <section class="card">
+            <h2 class="card-header">
+                <span class="icon-circle problem">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8zm-1-5h2v2h-2zm0-8h2v6h-2z"/></svg>
+                </span>
+                課題：2025年に入り、売上が急に失速
+            </h2>
+            <div class="card-body">
                 <p>福岡県宗像市の海鮮居酒屋の事例。2024年までは順調だったものの、2025年1月〜4月は予算・前年割れが続く状態でした。</p>
-                <p>WEB売上の約6割を占める自社サイト(C-mo)が長年見直されておらず、予約のボトルネックになっている可能性が浮上しました。</p>
+                <p>WEB売上の約6割を占める自社サイトが長年見直されておらず、予約のボトルネックになっている可能性が浮上しました。</p>
             </div>
         </section>
 
-        <section class="analysis">
-            <h2><span class="icon">🔍</span>分析と施策：サイトの「使いにくさ」を解消</h2>
-            <div class="content-box">
-                <p>無料ツール「Microsoft Clarity」で調査した結果、以下の問題点が判明しました。</p>
-                <ul>
-                    <li>TOPページに外部リンクや不要な情報が多すぎ、重要なコンテンツに辿り着く前にユーザーが離脱している。</li>
-                    <li>情報が古く、サイトの信頼性が低下している。</li>
+        <section class="card">
+            <h2 class="card-header">
+                <span class="icon-circle analysis">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"></path></svg>
+                </span>
+                分析と施策：サイトの「使いにくさ」を解消
+            </h2>
+            <div class="card-body">
+                <p>無料ツール「Microsoft Clarity」での調査で、以下の問題点が判明しました。</p>
+                <ul class="point-list">
+                    <li>外部リンクや不要な情報が多く、重要コンテンツにたどり着けていない。</li>
+                    <li>古い情報が散見され、サイトの信頼性が低い。</li>
                 </ul>
                 <p class="action-title">そこで、4月中旬に以下の施策を実施しました。</p>
-                <ul>
+                <ul class="action-list">
                     <li>TOPページの情報をスマホ1スクロール分に大幅削減。</li>
-                    <li>「ふるさと納税」などの外部リンクを削除し、コースや料理への導線を確保。</li>
-                    <li>古いメニューや価格表記を最新の情報に更新。</li>
+                    <li>外部リンクを削除し、コースや料理への導線を確保。</li>
+                    <li>古いメニューや価格表記を最新情報に更新。</li>
                 </ul>
             </div>
         </section>
 
-
-        <section class="results">
-            <h2><span class="icon">🎉</span>結果：予約率とユーザーの意欲が劇的に改善</h2>
-            <div class="results-grid">
-                <div class="result-card">
-                    <p class="result-label">WEBサイトを見直したら</p>
-                    <div class="result-main">
-                        <p class="result-text">実予約率が</p>
-                        <p class="result-number">57<span class="unit">%</span></p>
-                        <p class="result-text">改善！</p>
+        <section class="card">
+            <h2 class="card-header">
+                 <span class="icon-circle result">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1.293-6.293l5.586-5.586-1.414-1.414-5.586 5.586-2.879-2.879-1.414 1.414L10.707 15.707z"></path></svg>
+                </span>
+                結果：予約率とサイト訪問者の質が大幅に改善
+            </h2>
+            <div class="card-body results-container">
+                <div class="result-item">
+                    <h3>実予約率</h3>
+                    <div class="result-value-box">
+                        <p class="before-value">32.2%</p>
+                        <p class="arrow">↓</p>
+                        <p class="after-value">50.6%</p>
                     </div>
-                    <p class="result-caption">（32.2% → 50.6%に向上）</p>
                 </div>
-                <div class="result-card">
-                    <p class="result-label">興味を持ってサイトを閲覧する人が</p>
-                    <div class="result-main">
-                        <p class="result-number">339<span class="unit">%</span></p>
-                        <p class="result-text">増加！</p>
+                <div class="result-item large">
+                    <h3>High Intentionユーザー</h3>
+                    <p class="main-number">339%<span class="sub-text">増加</span></p>
+                    <div class="chart-container">
+                        <div class="chart-bar" style="height: 20%;">3月<span>4.6%</span></div>
+                        <div class="chart-bar" style="height: 60%;">4月<span>13.8%</span></div>
+                        <div class="chart-bar" style="height: 100%;">5月<span>20.3%</span></div>
                     </div>
-                    <p class="result-caption">（High Intentionユーザーの比率が4.62% → 20.28%に向上）</p>
                 </div>
             </div>
         </section>
 
-        <div class="explanation-box">
+        <section class="explanation-box">
             <h4>※High Intentionユーザーとは？</h4>
             <p>サイトに5秒以上滞在し、クリックや主要なイベントを通じて積極的に操作を行うなど、強いエンゲージメントを反映したセッションを指します。多くの場合、予約や購入といったコンバージョンに近い、関心の高いユーザーとされています。</p>
-        </div>
+        </section>
+
     </div>
 
 </body>
