--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UI改善によるWebサイトのパフォーマンス向上事例</title>
+    <title>導線改善によるWebサイトのパフォーマンス向上事例</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
     <div class="page-container">
         <header>
-            <h1>UI改善で予約率が大幅向上した<br>Webサイト改善事例</h1>
+            <h1>導線改善で予約率が大幅向上した<br>Webサイト改善事例</h1>
             <p>Microsoft Clarityを用いた分析・改善施策</p>
         </header>
 
