--- a/index.html
+++ b/index.html
@@ -84,8 +84,23 @@
             <h4>※High Intentionユーザーとは？</h4>
             <p>サイトに5秒以上滞在し、クリックや主要なイベントを通じて積極的に操作を行うなど、強いエンゲージメントを反映したセッションを指します。多くの場合、予約や購入といったコンバージョンに近い、関心の高いユーザーとされています。</p>
         </section>
-
-    </div>
+        
+        <section class="card">
+            <h2 class="card-header">
+                <span class="icon-circle checkpoint">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M19.78 6.22a.75.75 0 0 0-1.06 0L10 14.94l-3.72-3.72a.75.75 0 0 0-1.06 1.06l4.25 4.25a.75.75 0 0 0 1.06 0l9.25-9.25a.75.75 0 0 0 0-1.06zM4 3a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2H4zm0 1.5h16a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H4a.5.5 0 0 1-.5-.5V5a.5.5 0 0 1 .5-.5z"></path></svg>
+                </span>
+                今回の改善チェックポイント
+            </h2>
+            <div class="card-body">
+                <ul class="point-list check">
+                    <li>サイトを訪れたお客様が「メニュー」「コース」「予約方法」などの情報がすぐにわかる配置になっているか？</li>
+                    <li>WEB予約画面まで1クリックで辿り着けるか？</li>
+                    <li>サイトのトップページに情報が多すぎないか？（スマホ画面で1スクロール程度）</li>
+                </ul>
+            </div>
+        </section>
+        </div>
 
 </body>
 </html>
