--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 課題：2025年に入り、売上が急に失速
             </h2>
             <div class="card-body">
-                <p>福岡県宗像市の海鮮居酒屋の事例。2024年までは順調だったものの、2025年1月〜4月は予算・前年割れが続く状態でした。</p>
+                <p>福岡県宗像市のローカルエリア（地元客メイン）にある居酒屋の事例。2024年までは順調だったものの、2025年1月〜4月は予算・前年割れが続く状態でした。</p>
                 <p>WEB売上の約6割を占める自社サイトが長年見直されておらず、予約のボトルネックになっている可能性が浮上しました。</p>
             </div>
         </section>
