--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                 </ul>
             </div>
         </section>
+
+        <section class="final-cta">
+            <p class="main-text">WEB集客でご相談事がありましたら、ご担当者様経由でCS-Cまでお気軽にご相談ください！</p>
+            <p class="sub-text">（Googleマップ・集客サイト・SNS・WEB広告・自社サイトなど）</p>
+        </section>
         </div>
 
 </body>
